--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Tar Noe Gatar</h1>
+    <h1>Ache Republic</h1>
     <p class="subtitle">Root Zone of the Ache Republic</p>
   </header>
 
